@@ -75,7 +75,7 @@ class ShellPublishST {
     @ValueSource(chars = {'3', '5'})
     void test_messageToFile(final char mqttVersion) throws Exception {
         final Path publishFile = Files.createTempFile("publish", "txt");
-        Files.write(publishFile, "message".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(publishFile, "message");
         final List<String> publishCommand = List.of("pub", "-t", "test", "-m:file", publishFile.toString());
         mqttCliShell.connectClient(hivemq, mqttVersion);
         mqttCliShell.executeAsync(publishCommand)
